// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model Owner {
  id           String @id @default(cuid())
  firstname    String
  lastname     String
  email        String
  gender       String
  profileImage String
}

model Account {
  accountNo  String   @id @default(cuid())
  acctType   String
  balance    Float
  dateOpened DateTime @default(now())
  ownerId    String
}

model Transaction {
  transId   Int    @id @default(autoincrement())
  transType String
  amount    Float
  accountNo String
}
